feat(Highlight): 完成ddx 高亮

--- a/syntaxes/ddx.yaml
+++ b/syntaxes/ddx.yaml
@@ -475,7 +475,7 @@ repository:
     endCaptures:
       '0': { name: punctuation.definition.string.end.html }
     patterns:
-      - include: '#vue-interpolations'
+      # - include: '#vue-interpolations'
       - include: '#entities'
   string-single-quoted:
     name: string.quoted.single.html
@@ -486,7 +486,7 @@ repository:
     endCaptures:
       '0': { name: punctuation.definition.string.end.html }
     patterns:
-      - include: '#vue-interpolations'
+      # - include: '#vue-interpolations'
       - include: '#entities'
   tag-generic-attribute:
     name: entity.other.attribute-name.html
@@ -508,7 +508,7 @@ repository:
         endCaptures:
           '0': { name: punctuation.definition.string.end.html }
         patterns:
-          - include: '#vue-interpolations'
+          # - include: '#vue-interpolations'
           - include: '#entities'
       - name: string.quoted.single.html
         contentName: meta.toc-list.id.html
@@ -519,62 +519,12 @@ repository:
         endCaptures:
           '0': { name: punctuation.definition.string.end.html }
         patterns:
-          - include: '#vue-interpolations'
+          # - include: '#vue-interpolations'
           - include: '#entities'
   tag-stuff:
     patterns:
-      - include: '#vue-directives'
+      # - include: '#vue-directives'
       - include: '#tag-id-attribute'
       - include: '#tag-generic-attribute'
       - include: '#string-double-quoted'
       - include: '#string-single-quoted'
-  vue-directives:
-    name: meta.directive.vue
-    begin: (?:\b(v-)|(:|@|#))([a-zA-Z\-_]+)(?:\:([a-zA-Z\-_]+))?(?:\.([a-zA-Z\-_]+))*\s*(=)
-    end: (?<='|")|(?=[\s<>`])
-    captures:
-      '1': { name: entity.other.attribute-name.html }
-      '2': { name: punctuation.separator.key-value.html }
-      '3': { name: entity.other.attribute-name.html }
-      '4': { name: entity.other.attribute-name.html }
-      '5': { name: entity.other.attribute-name.html }
-      '6': { name: punctuation.separator.key-value.html }
-    patterns:
-      - name: source.directive.vue
-        begin: '`'
-        beginCaptures:
-          '0': { name: punctuation.definition.string.begin.html }
-        end: '`'
-        endCaptures:
-          '0': { name: punctuation.definition.string.end.html }
-        patterns:
-          - include: source.js#expression
-      - name: source.directive.vue
-        begin: '"'
-        beginCaptures:
-          '0': { name: punctuation.definition.string.begin.html }
-        end: '"'
-        endCaptures:
-          '0': { name: punctuation.definition.string.end.html }
-        patterns:
-          - include: source.js#expression
-      - name: source.directive.vue
-        begin: "'"
-        beginCaptures:
-          '0': { name: punctuation.definition.string.begin.html }
-        end: "'"
-        endCaptures:
-          '0': { name: punctuation.definition.string.end.html }
-        patterns:
-          - include: source.js#expression
-  vue-interpolations:
-    patterns:
-      - name: expression.embedded.vue
-        begin: \{\{\{?
-        beginCaptures:
-          '0': { name: punctuation.definition.generic.begin.html }
-        end: \}\}\}?
-        endCaptures:
-          '0': { name: punctuation.definition.generic.end.html }
-        patterns:
-          - include: source.js#expression
