--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,9 +2,7 @@
     "files": [],
     "references": [
       { "path": "scripts" },
-      { "path": "client" },
-      { "path": "server" },
-      { "path": "test" }
+      { "path": "client" }
     ]
   }
   
