--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,8 @@
     "files": [],
     "references": [
       { "path": "scripts" },
-      { "path": "client" }
+    //   { "path": "client" },
+    //   { "path": "server" },
+    //   { "path": "test" }
     ]
   }
-  
