--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -1,9 +1,9 @@
 {
-    "extends": "../tsconfig.options.json",
-    "compilerOptions": {
-      "composite": true,
-      "outDir": "../dist",
-      "rootDir": ".."
-    }
-  }
-  
+  "extends": "../tsconfig.options.json",
+  "compilerOptions": {
+    "composite": true,
+    "outDir": "../dist",
+    "rootDir": ".."
+  },
+  "exclude": ["node_modules", ".vscode-test"]
+}
