--- a/scripts/tsconfig.json
+++ b/scripts/tsconfig.json
@@ -1,12 +1,9 @@
 {
-    "extends": "../tsconfig.options.json",
-    "compilerOptions": {
-      "composite": true,
-      "outDir": "../dist",
-      "rootDir": ".."
-    },
-    "references": [
-      { "path": "../client" }
-    ]
-  }
-  
+  "extends": "../tsconfig.options.json",
+  "compilerOptions": {
+    "composite": true,
+    "outDir": "../dist",
+    "rootDir": ".."
+  },
+  "references": [{ "path": "../client" }]
+}
