--- a/package.json
+++ b/package.json
@@ -152,11 +152,11 @@
     "prettier": "^1.19.1",
     "shelljs": "^0.8.3",
     "tslint": "^5.20.1",
-    "typescript": "^3.7.2",
-    "vscode": "^1.1.36"
+    "typescript": "^3.6.3",
+    "vscode-test": "^1.2.3"
   },
   "dependencies": {
     "vscode-languageclient": "^5.2.1",
-    "vscode-languageserver-types": "^3.14.0"
+    "vscode-languageserver-types": "3.14.0"
   }
 }
