--- a/server/package.json
+++ b/server/package.json
@@ -44,7 +44,7 @@
 		"nyc": "^14.1.1",
 		"source-map-support": "^0.5.16",
 		"tslint": "^5.12.1",
-		"typescript": "^3.7.2",
+    "typescript": "^3.6.3",
 		"vscode-test": "^1.2.0"
 	},
 	"dependencies": {
@@ -63,8 +63,8 @@
 		"stylus-supremacy": "^2.14.0",
 		"vscode-css-languageservice": "^4.0.2",
 		"vscode-emmet-helper": "^1.2.16",
-		"vscode-languageserver": "^5.2.1",
-		"vscode-languageserver-types": "^3.14.0",
+    "vscode-languageserver": "^5.3.0-next.4",
+    "vscode-languageserver-types": "^3.15.0-next.1",
 		"vscode-uri": "^2.1.1"
 	}
 }
