--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,9 @@
     "files": [],
     "references": [
       { "path": "scripts" },
-    //   { "path": "client" },
-    //   { "path": "server" },
+      { "path": "client" },
+      { "path": "server" },
     //   { "path": "test" }
-    ]
+    ],
+    "exclude": ["node_modules", ".vscode-test"]
   }
